git practice how im learning

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>I'm David</p>
     <p>I'm 28 years old</p>
     <p>I'm living in Germany</p>
+    <p>I'm learning programming myself</p>
 </body>
 </html>
